--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "magic-sdk": "^18.4.1",
+    "magic-sdk": "17.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
